Fix : 슬라이드 overflow: hidden 속성 추가

--- a/src/components/Slider/Slide.scss
+++ b/src/components/Slider/Slide.scss
@@ -5,6 +5,5 @@
 
   .slideImg {
     width: 1400px;
-    z-index: 1;
   }
 }
